--- a/config/database.yml
+++ b/config/database.yml
@@ -23,3 +23,11 @@ test:
 production:
   <<: *default
   database: db/production.sqlite3
+  database: db/production.sqlite3
+
+# production:
+#   adapter: postgresql
+#   database: my_database_production
+#   pool: 5
+#   timeout: 5000
+
